--- a/html/style.css
+++ b/html/style.css
@@ -1,10 +1,10 @@
 /* Allgemeine Stile */
 :root {
-    --primary-color: #63bb67;     /* Hauptfarbe Grün */
-    --primary-light: #8cd590;     /* Helleres Grün */
-    --background-green: #28902D;  /* Dunkleres Hintergrund-Grün */
+    --primary-color: #6380bb;     /* Hauptfarbe Grün */
+    --primary-light: #8cb5d5;     /* Helleres Grün */
+    --background-green: #3857de;  /* Dunkleres Hintergrund-Grün */
     --text-color: #1e293b;       /* Dunkelgrau für Text */
-    --inner-box-bg: #63bb67;     /* Grüner Hintergrund für innere Boxen */
+    --inner-box-bg: #89a2e7;     /* Grüner Hintergrund für innere Boxen */
     --inner-text-color: #ffffff; /* Weißer Text in Boxen */
     --stat-value-color: #ffd700; /* Gelber Text für Werte */
     --header-bg: #282a90; /* Hintergrundfarbe für den Header #28902D */
@@ -163,12 +163,12 @@ body {
 
 /* Überschriften */
 h1 {
-    color: #007bff;
+    color: #12355b;
     text-align: center;
 }
 
 h3 {
-    color: #007bff !important;
+    color: #00336a !important;
     font-size: 24px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -259,7 +259,7 @@ button:hover {
 .feature h3 {
     font-size: 1.4rem;
     margin-bottom: 10px;
-    color: #007bff;
+    color: #00336a;
 }
 .feature p {
     font-size: 1rem;
@@ -272,7 +272,7 @@ p {
 }
 
 a {
-    color: #007bff;
+    color: #014792; /* #007bff */
     text-decoration: none;
     font-weight: bold;
     cursor: pointer;
@@ -1064,7 +1064,7 @@ input[type="submit"]:disabled,
 
 .version {
     font-size: 0.4em;
-    color: #000;
+    color: #ece6e6;
     vertical-align: middle;
     margin-left: 0.5rem;
     text-shadow: none !important;
@@ -1166,7 +1166,7 @@ input[type="submit"]:disabled,
     color: #333;
 }
 .update-section p {
-    color: #666;
+    color: #b0b0b0;
     margin-bottom: 1rem;
 }
 .progress-container {
